--- a/SOURCE CODE/src/index.css
+++ b/SOURCE CODE/src/index.css
@@ -2,22 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 body {
-	animation: fadeInAnimation ease .7s;
-	animation-iteration-count: 1;
-	animation-fill-mode: forwards;
-}
-
-@keyframes fadeInAnimation {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-
-	}
-}
-
-body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -46,9 +30,9 @@ body {
 }
 
 body{
-  transition: all .3s ease-out;
+  transition: all 2.3s ease-out;
   height: 100vh;
-  animation: fadeInAnimations ease .7s;
+  animation: fadeInAnimations ease 2.3s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   width: 100%;
@@ -61,11 +45,12 @@ body{
 }
 @keyframes fadeInAnimations {
 0% {
-      margin-top: -100%;
+  background-color: black;
+  margin-top: -100%;
   }
 100% {
   opacity: 1;
-  
+  background-color: white;
 }
 }
 .mekan *{
